# perchance

./: .gitignore  ADR-004-http-client.md  ADR-005-pydantic-models.md  ADR-006-cli-framework.md  ADR-007-package-manager.md  AGENTS.md  CLI-Reference.md  Development.md  Home.md  README.md  opencode.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/decisions/: ADR-001-multi-ui-architecture.md  ADR-002-template-engine.md  ADR-003-storage-design.md  ADR-004-http-client.md  ADR-005-pydantic-models.md  ADR-006-cli-framework.md  ADR-007-package-manager.md
src/perchance/: __init__.py
src/perchance/api/: __init__.py  auth.py  client.py
src/perchance/core/: export.py  generator.py  prompt.py
src/perchance/models/: __init__.py  generation.py  generator.py  user.py
src/perchance/storage/: __init__.py  config.py  db.py
src/perchance_cli/: formatting.py  main.py
src/perchance_cli/commands/: auth.py  config.py  export.py  list.py  run.py  search.py
src/perchance_gui/: __init__.py  app.py
src/perchance_gui/theme/: manager.py
src/perchance_gui/windows/: generator_browser.py  main_window.py
src/perchance_toolkit/: __init__.py
src/perchance_toolkit/api/: auth.py  client.py
src/perchance_toolkit/core/: __init__.py  export.py  generator.py  perchance_engine.py  prompt.py
src/perchance_toolkit/models/: __init__.py  search_result.py
src/perchance_toolkit/storage/: config.py  db.py
src/perchance_toolkit_cli/: __init__.py  formatting.py  main.py
src/perchance_toolkit_cli/commands/: auth.py  config.py  export.py  info.py  list.py  run.py  search.py
src/perchance_toolkit_gui/: __init__.py  app.py
src/perchance_toolkit_gui/canvas/: drawing.py
src/perchance_toolkit_gui/windows/: main_window.py  settings_dialog.py
src/perchance_toolkit_tui/: __init__.py  app.py
src/perchance_toolkit_tui/screens/: history.py  search.py
src/perchance_tui/: __init__.py  app.py
src/perchance_tui/screens/: generator_detail.py  history.py  settings.py
tests/: test_engine.py  test_models.py  test_search.py
wiki/: Home.md
