[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perchance"
version = "0.1.0"
description = "CLI, TUI, and GUI applications for perchance.org"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "perchance contributors"},
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
tui = ["textual>=1.0"]
gui = ["PySide6>=6.6"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.0",
    "ruff>=0.3",
    "pre-commit>=3.0",
]
all = ["perchance[tui,gui]"]

[project.scripts]
perchance = "perchance_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/perchance", "src/perchance_cli"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
